samples/_failures_safe/1761042893_bbc22f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_503cd30c.c: In function ‘main’:
./samples/SAFE/__tmp_503cd30c.c:161: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_503cd30c.c:160:5: error: expected declaration or statement at end of input
  160 |     return EXIT_SUCCESS
      |     ^~~~~~
